# Sheetwise

./: .gitignore  GUIDE.md  LICENSE  PDF_GENERATION_IMPLEMENTATION.md  README.md  WINDOWS_WKHTMLTOPDF_FIX.md  build_linux.sh  build_windows.bat  pyproject.toml  setup.sh
.github/: BUILD_DEPENDENCIES.md  BUILD_SUMMARY.md  README.md  RELEASE.md  RELEASE_EN.md  RELEASE_EXAMPLE.md  RELEASE_FAQ.md  RELEASE_QUICK.md  RELEASE_SETUP.md  SCROLLVIEW_IMPLEMENTATION.md  TTKBOOTSTRAP_MIGRATION.md  WINDOW_REUSE_FIX.md  release-drafter.yml  release-template.md
.github/workflows/: cd_linux_workflow.yml  cd_windows_workflow.yml  cd_workflow.yml  ci_linux_workflow.yml
database/: analisa_planilhas.db  sheetwise.db
docs/: GUIA_RAPIDO.md
docs/examples/: enderecos.csv
docs/exemplos/: clientes.csv  vendas.csv
docs/pt_BR/: README.pt_BR.md
scripts/: build_linux.sh  build_windows.bat  setup.sh
src/: __init__.py  main.py
src/controllers/: __init__.py  app_controller.py
src/models/: __init__.py  database.py
src/static/i18n/: en.json  pt.json
src/static/templates/: template_result.html
src/utils/: __init__.py  file_processor.py  i18n_manager.py
src/views/: __init__.py  login_view.py  main_view.py
