[project]
name = "sheetwise"
version = "0.0.1"

description = "Sheetwise é um software desktop desenvolvido em Python com interface gráfica moderna usando Tkinter. O sistema permite analisar planilhas CSV/XLSX contendo dados de clientes e vendas, gerando relatórios detalhados com estatísticas e análises de integridade dos dados."
authors = [
    {name = "Mário de Araújo Carvalho", email = "mariodearaujocarvalho@gmail.com"},
]

readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["data validation", "data processing", "spreadsheet validation", "data integrity", "tabular data", "scientific research", "environmental data", "indicator systems"]
classifiers = [
  "Programming Language :: Python"
]

requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas-stubs (>=2.2.3.250527,<3.0.0)",
    "ttkthemes (>=3.2.2,<4.0.0)",
    "pillow (>=10,<11)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "ttkbootstrap (>=1.14.2,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/MarioCarvalhoBr/"
Documentation = "https://github.com/MarioCarvalhoBr/Sheetwise/docs"
Repository = "https://github.com/MarioCarvalhoBr/Sheetwise.git"
"Bug Tracker" = "https://github.com/MarioCarvalhoBr/Sheetwise/issues"
Changelog = "https://github.com/MarioCarvalhoBr/Sheetwise/blob/dev/CHANGELOG.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
canoa-data-validate = "src.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
